<resources>

    <string name="app_name">CardioManager</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">HardBeat</string>
    <string name="about_text">Cardiologic disease is the major cause of death in our time. 
        						Along with the rapid development of computer technology, 
        						such as increasing computing power with decreasing size, 
        						allows to use a handheld device like mobile phone for 
        						monitoring cardiac patients. The work includes research 
        						in the field of processing cardiac signals handheld devices. 
        						Tasked design, build and test software.</string>
    <string name="about_title">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_personal">Personal information</string>
    <string name="btnUserNameText">UserName</string>
    <string name="title_activity_user_list">Users List</string>
    <string name="menu_personal">Personal Info</string>
    <string name="menu_about">About</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="preferenses_category_audio_title">Audio format settings </string>
    <string name="preferenses_sample_rate_title">Sample rate</string>
    <string name="preferenses_channels_title">Channel</string>
    <string name="preferenses_encoding_title">Encoding</string>
    <string name="preferenses_channels_text">Enable use stereo recording</string>
    <string name="personal_btn_save">Save</string>
    <string name="personal_ed_username">User Name:</string>
    <string name="personal_ed_datebrth">Date of birth:</string>
    <string name="personal_ed_height">Height:</string>
    <string name="personal_ed_width">Width:</string>
    <string name="personal_ed_desesses">Diseases</string>
    <string name="title_activity_data_sender">Send Data</string>
    <string name="menu_send_data">Send</string>
    <string name="menu_arhive">Arhive</string>
    <string name="preferenses_category_advanced_title">Advanced</string>
    <string name="version">0.5.1</string>

</resources>