<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
                android:title="@string/preferenses_category_audio_title">
	    <ListPreference
                        android:title="@string/preferenses_sample_rate_title"
                        android:summary=""
                        android:key="SampleRates"
                        android:defaultValue="8000"
                        android:entries="@array/listSampleRates"
                        android:entryValues="@array/listSampleRates" />
	    <CheckBoxPreference
                        android:title="@string/preferenses_channels_title"
                        android:defaultValue="false"
                        android:summary="@string/preferenses_channels_text"
                        android:key="Channels" />
	    <ListPreference
                        android:title="@string/preferenses_encoding_title"
                        android:summary="This preference allows to select an item in a array"
                        android:key="Encoding"
                        android:defaultValue="false"
                        android:entries="@array/listEncoding"
                        android:entryValues="@array/listBoolean" />
    </PreferenceCategory>
    <PreferenceCategory
    			android:title="@string/preferenses_category_advanced_title">
	    
    </PreferenceCategory>
    
</PreferenceScreen>